*** Phase 6 *** * Retrofitted Content.Chunk by removing Chunk.getByteBuffer(), replaced by Chunk.acquire(). * Retainable now implements AutoCloseable so it can be used in try-with-resources. * Changed RetainableByteBuffer.GatheringTarget signature to take offset and length to optimize gathering writes.
Signed-off-by: Simone Bordet <simone.bordet@gmail.com>